# mygitprompt

./: .gitignore  Makefile  README.md  colors.h  config.h  gitstatus.c  gitstatus.h  meson.build  mygitprompt.c  mygitprompt.code-workspace  test.c
.github/workflows/: build.yml  release.yml
examples/: noalias.c
scripts/: get_version.sh
src/: colors.h  config.h  gitstatus.c  gitstatus.h  mygitprompt.c
